Add build type google to all components

--- a/libraries/cast/build.gradle
+++ b/libraries/cast/build.gradle
@@ -15,10 +15,13 @@ apply from: "$gradle.ext.androidxMediaSettingsDir/common_library_config.gradle"
 
 android {
     namespace 'androidx.media3.cast'
-
     publishing {
         singleVariant('release') {
             withSourcesJar()
+        }
+    }
+    buildTypes {
+        google {
         }
     }
 }
