--- a/libraries/common/build.gradle
+++ b/libraries/common/build.gradle
@@ -40,6 +40,10 @@ android {
             withSourcesJar()
         }
     }
+    buildTypes {
+        google {
+        }
+    }
 }
 
 dependencies {
