--- a/libraries/datasource_cronet/build.gradle
+++ b/libraries/datasource_cronet/build.gradle
@@ -21,6 +21,10 @@ android {
             withSourcesJar()
         }
     }
+    buildTypes {
+        google {
+        }
+    }
 }
 
 dependencies {
