--- a/libraries/decoder_ffmpeg/build.gradle
+++ b/libraries/decoder_ffmpeg/build.gradle
@@ -12,6 +12,12 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 apply from: "$gradle.ext.androidxMediaSettingsDir/common_library_config.gradle"
+android {
+    buildTypes {
+        google {
+        }
+    }
+}
 
 android.namespace = 'androidx.media3.decoder.ffmpeg'
 
