--- a/libraries/exoplayer_ima/build.gradle
+++ b/libraries/exoplayer_ima/build.gradle
@@ -25,6 +25,10 @@ android {
             withSourcesJar()
         }
     }
+    buildTypes {
+        google {
+        }
+    }
 }
 
 dependencies {
