--- a/libraries/test_session_current/build.gradle
+++ b/libraries/test_session_current/build.gradle
@@ -36,6 +36,10 @@ android {
     }
 
     sourceSets.main.assets.srcDir '../test_data/src/test/assets/'
+    buildTypes {
+        google {
+        }
+    }
 }
 
 dependencies {
