--- a/libraries/decoder/build.gradle
+++ b/libraries/decoder/build.gradle
@@ -20,6 +20,8 @@ android {
         debug {
             testCoverageEnabled = true
         }
+        google {
+        }
     }
 
     publishing {
