--- a/libraries/effect/build.gradle
+++ b/libraries/effect/build.gradle
@@ -27,6 +27,8 @@ android {
         debug {
             testCoverageEnabled = true
         }
+        google {
+        }
     }
 
     sourceSets {
