--- a/libraries/exoplayer_rtsp/build.gradle
+++ b/libraries/exoplayer_rtsp/build.gradle
@@ -20,6 +20,8 @@ android {
         debug {
             testCoverageEnabled = true
         }
+        google {
+        }
     }
 
     sourceSets.test.assets.srcDir '../test_data/src/test/assets/'
