--- a/libraries/session/build.gradle
+++ b/libraries/session/build.gradle
@@ -23,6 +23,8 @@ android {
         debug {
             testCoverageEnabled = true
         }
+        google {
+        }
     }
     sourceSets.test.assets.srcDir '../test_data/src/test/assets/'
     lint {
