--- a/libraries/test_data/build.gradle
+++ b/libraries/test_data/build.gradle
@@ -12,5 +12,11 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 apply from: "$gradle.ext.androidxMediaSettingsDir/common_library_config.gradle"
+android {
+    buildTypes {
+        google {
+        }
+    }
+}
 
 android.namespace 'androidx.media3.test.data'
