--- a/libraries/test_session_common/build.gradle
+++ b/libraries/test_session_common/build.gradle
@@ -19,6 +19,10 @@ android {
     buildFeatures {
         aidl true
     }
+    buildTypes {
+        google {
+        }
+    }
 }
 
 dependencies {
