--- a/libraries/test_utils_robolectric/build.gradle
+++ b/libraries/test_utils_robolectric/build.gradle
@@ -22,6 +22,10 @@ android {
             withSourcesJar()
         }
     }
+    buildTypes {
+        google {
+        }
+    }
 }
 
 dependencies {
