--- a/libraries/ui/build.gradle
+++ b/libraries/ui/build.gradle
@@ -16,6 +16,12 @@ apply from: "$gradle.ext.androidxMediaSettingsDir/common_library_config.gradle"
 android.buildTypes.debug.testCoverageEnabled true
 
 android {
+    buildTypes {
+        debug {
+        }
+        google {
+        }
+    }
     namespace 'androidx.media3.ui'
 
     lint {
