--- a/libraries/ui_leanback/build.gradle
+++ b/libraries/ui_leanback/build.gradle
@@ -23,6 +23,10 @@ android {
             withSourcesJar()
         }
     }
+    buildTypes {
+        google {
+        }
+    }
 }
 
 dependencies {
